--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
 
     <h1>Sprint 3 IT ACADEMY</h1>
     
+    <script src="./src/data.js"></script>
+    <script src="./src/films.js"></script>
 </body>
 
 </html>
